welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value n1
  n1=Math.abs(n-100)
  ^nearHundred:3: error: not found: value n2
  n2=Math.abs(n-200)
  ^nearHundred:4: error: not found: value n1
  if (n1<10) {
      ^nearHundred:6: error: not found: value n2
  } else if (n2<10) {
             ^