welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  n1=Math.abs(n-100)
  n2=Math.abs(n-200)
  if (n1<10) {
    return true
  } else if (n2<10) {
    return true
  } else return false
}